compiler/testData/cli/jvm/wrongAbiVersion.kt
import wrong.*

fun foo(x: ClassWithWrongAbiVersion) {
  bar()
}